--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   fpdart: ^1.2.0
   http: ^1.6.0
   get_storage: ^2.1.1
+  connectivity_plus: ^6.1.0
   image_picker: ^1.2.1
   flutter_image_compress: ^2.4.0
   path_provider: ^2.1.5
